--- a/names.html
+++ b/names.html
@@ -3,13 +3,10 @@
 <html lang="en">
 <head>
     <title>Firefly RPG Name Generator</title>
-    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel=
+    <link href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel=
     "stylesheet">
     <link href="names.css" media="all" rel="stylesheet" type="text/css">
-    <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="generator.js" type="text/javascript"></script>
-    <script src="names.js" type="text/javascript"></script>
-</head>
+   </head>
 
 <body>
     <div class="container">
@@ -34,6 +31,10 @@
             <p>props to <a href="http://donjon.bin.sh/site/code/random/">drow</a> for the random
             generator engine</p>
         </section>
-    </div><script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    </div>
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script src="generator.js" type="text/javascript"></script>
+    <script src="names.js" type="text/javascript"></script>
 </body>
 </html>
