experimental verse map

--- a/names.html
+++ b/names.html
@@ -26,6 +26,7 @@
             <ul class="nav navbar-nav">
               <li class="active"><a href="#">Name Generator</a></li>
               <li><a href="travel.html">Travel Calculator</a></li>
+              <li><a href="map/index.html">Interactive Map (experimental)</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
             </ul>
