--- a/travel.html
+++ b/travel.html
@@ -28,6 +28,7 @@
             <ul class="nav navbar-nav">
               <li ><a href="names.html">Name Generator</a></li>
               <li class="active"><a href="travel.html">Travel Calculator</a></li>
+              <li><a href="map/index.html">Interactive Map (experimental)</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
             </ul>
