add dice probability calculator

--- a/names.html
+++ b/names.html
@@ -26,7 +26,7 @@
             <ul class="nav navbar-nav">
               <li class="active"><a href="#">Name Generator</a></li>
               <li><a href="travel.html">Travel Calculator</a></li>
-              <li><a href="comingsoon.html">Dice Pool Probability</a></li>
+              <li><a href="probability.html">Dice Pool Probability</a></li>
               <li><a href="map/index.html">Interactive Map (experimental)</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -34,6 +34,13 @@
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
       </div>
+
+      <noscript>
+          <div class="panel panel-danger">
+              <div class="panel-heading">Javascript Required</div>
+              <div class="panel-body"><p>This site requires JavaScript. But you're browser doesn't have it enabled, so basically, this site won't work.</p></div>
+          </div>
+      </noscript>
 
         <section id="generator" class="box row">
             <h1>Generator</h1>
