--- a/travel.html
+++ b/travel.html
@@ -28,7 +28,7 @@
             <ul class="nav navbar-nav">
               <li ><a href="names.html">Name Generator</a></li>
               <li class="active"><a href="travel.html">Travel Calculator</a></li>
-              <li><a href="comingsoon.html">Dice Pool Probability</a></li>
+              <li><a href="probability.html">Dice Pool Probability</a></li>
               <li><a href="map/index.html">Interactive Map (experimental)</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -37,6 +37,12 @@
         </div><!--/.container-fluid -->
       </div>
 
+      <noscript>
+          <div class="panel panel-danger">
+              <div class="panel-heading">Javascript Required</div>
+              <div class="panel-body"><p>This site requires JavaScript. But you're browser doesn't have it enabled, so basically, this site won't work.</p></div>
+          </div>
+      </noscript>
 
       <section id="travel-calc" class="box row">
       <h1>Travel Distance Calculator</h1>
