--- a/probability.html
+++ b/probability.html
@@ -80,6 +80,11 @@
                       <label for="d12" class="control-label">d12</label>
                       <div class="col-sm-8"><input type="number" class="form-control" id="d12" placeholder="0" disabled /></div>
                   </div>
+
+                  <div class="form-group">
+                      <label for="keep" class="control-label">Keep</label>
+                      <div class="col-sm-8"><input type="number" class="form-control" id="keep" value="2" min="2" disabled /></div>
+                  </div>
                   <div class="form-group">
                       <div class="col-sm-10"><button class="form-control btn btn-warning" id="but_reset" type="reset" disabled>Clear Pool</button></div>
                   </div>
