link to ship complications page

--- a/probability.html
+++ b/probability.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <title>
-      Firefly RPG Travel Calculator
+      Firefly RPG Tools: Dice Pool Probability Calculator
   </title>
   <link href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
   <link href="styles.css" media="all" rel="stylesheet" type="text/css">
@@ -28,6 +28,7 @@
             <ul class="nav navbar-nav">
               <li ><a href="names.html">Name Generator</a></li>
               <li><a href="travel.html">Travel Calculator</a></li>
+              <li><a href="ship.html">Ship Complications</a></li>
               <li class="active"><a href="probability.html">Dice Pool Probability</a></li>
               <li><a href="map/index.html">Interactive Map (experimental)</a></li>
             </ul>
