--- a/names.html
+++ b/names.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
-    <title>Firefly RPG Name Generator</title>
+    <title>Firefly RPG Tools: Name Generator</title>
     <link href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel=
     "stylesheet">
     <link href="styles.css" media="all" rel="stylesheet" type="text/css">
@@ -26,6 +26,7 @@
             <ul class="nav navbar-nav">
               <li class="active"><a href="#">Name Generator</a></li>
               <li><a href="travel.html">Travel Calculator</a></li>
+              <li><a href="ship.html">Ship Complications</a></li>
               <li><a href="probability.html">Dice Pool Probability</a></li>
               <li><a href="map/index.html">Interactive Map (experimental)</a></li>
             </ul>
