--- a/ship.html
+++ b/ship.html
@@ -45,7 +45,7 @@
       </noscript>
 
       <section id="ship" class="box row">
-          <h1>Technobabble Complication</h1>
+          <h1>Technobabble Complications</h1>
           <p>Spits out a random nonsense complication. From page 211 in the Corebook.</p>
           <div class="col-md-4" role="form">
               <div class="form-inline" id="opts">
@@ -69,7 +69,8 @@
           <div id="result"class="col-md-4"></div>
       </section>
       <section id="ship2" class="box row">
-          <h1>Realistic Complication</h1>
+          <h1>Realistic Complications</h1>
+          <div class="alert alert-warning"><strong><p>Help Needed!</strong> This generator needs more data! Send cool ship parts and complications to <a href="mailto:me@caseylink.com">Casey</a>.</p></div>
           <p>Randomly selects a more plausible complication based on ship components.</p>
           <div class="col-md-4 form-horizontal" role="form" id="opts2">
               <div class='col-xs-12 form-group required'>
@@ -103,10 +104,8 @@
         <div class="container">
             <p class="text-muted">Excerpt from <a href=
                 "http://www.margaretweis.com/index.php/shop#!/~/product/id=29762279" title=
-                "firefly rpg corebook">Firefly RPG Corebook</a> pgs 162, 173, 182, 183, 193.
-            Props to <a href="http://donjon.bin.sh/site/code/random/">drow</a> for the random
-            generator engine</p>
-
+                "firefly rpg corebook">Firefly RPG Corebook</a> pgs 211, 227.
+            </p>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
