add randomize button

--- a/ship.html
+++ b/ship.html
@@ -93,6 +93,7 @@
 
               <div class='col-xs-12 form-group required'>
                   <button disabled class="btn btn-primary" id="generate2" type="button">Generate</button>
+                  <button disabled class="btn btn-info" id="randomize" type="button">Randomize</button>
                   <button disabled class="btn" id="clear2" type="button">Reset</button>
               </div>
           </div>
